--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,76 +1,59 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    /* Name: custom color palette
+       Author: Ilias Ism
+       URL: https://gradient.page */
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
- 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
- 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
- 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
- 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
- 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    /* CSS: .bg-gradient { background: var(--gradient) } */
+    --gradient: linear-gradient(to top left, #536976, #292E49);
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
- 
+    --background: 215 11.05% 3.2%;
+    --foreground: 215 1.7000000000000002% 97%;
+
+    --muted: 215 8.5% 12%;
+    --muted-foreground: 215 1.7000000000000002% 54%;
+
+    --popover: 215 61.6% 5.2%;
+    --popover-foreground: 215 1.7000000000000002% 97%;
+
+    --card: 215 61.6% 5.2%;
+    --card-foreground: 215 1.7000000000000002% 97%;
+
+    --border: 215 8.5% 12%;
+    --input: 215 8.5% 12%;
+
+    --primary: 215 17% 40%;
+    --primary-foreground: 215 1.7000000000000002% 97%;
+
+    --secondary: 215 8.5% 12%;
+    --secondary-foreground: 215 1.7000000000000002% 97%;
+
+    --accent: 215 8.5% 12%;
+    --accent-foreground: 215 1.7000000000000002% 97%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 215 1.7000000000000002% 97%;
+
+    --ring: 215 17% 40%;
     --radius: 0.5rem;
   }
- 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
- 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
- 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
- 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
- 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
- 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
- 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
- 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
-  }
+
 }
- 
+
 @layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  .bg-gradient {
+    background: var(--gradient)
   }
 }
